<resources>
    <string name="app_name">Dormitory</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="identifier">Identifier</string>
    <string name="login_page_image">Login page image</string>
    <string name="dormitory">Dormitory</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="full_name">Full name</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
    <string name="identify_otp_code">Identify OTP code</string>
    <string name="otp_code">OTP code</string>
    <string name="verify">Verify</string>
    <string name="loading">Loading</string>
    <string name="profile">Profile</string>
    <string name="room_type_image">Room type image</string>
    <string name="type">Type</string>
    <string name="outstanding_rooms">Outstanding rooms</string>
    <string name="outstanding_room_image">Outstanding room image</string>
    <string name="room_type">Room type</string>
    <string name="log_out">Log out</string>
    <string name="change_password">Change password</string>
    <string name="view_profile">View profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_password">Reset password</string>
    <string name="new_password">New password</string>
    <string name="save">Save</string>
    <string name="room_id">Room ID</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="status">Status</string>
    <string name="bills">Bills</string>
    <string name="pay">Pay</string>
    <string name="current_password">Current password</string>
    <string name="number_of_beds">Number of beds</string>
    <string name="expand">Expand</string>
    <string name="successfully">Successfully</string>
    <string name="select_room">Select room</string>
    <string name="current_room">Current room</string>
    <string name="admin_login_page">Admin login page</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_manager_login_page">Go to manager login page</string>
    <string name="room_type_image_transition">room_type_image_transition</string>
    <string name="room_type_name_transition">room_type_name_transition</string>
    <string name="room_image_transition">room_image_transition</string>
    <string name="room_name_transition">room_name</string>
    <string name="room_price_transition">room_price</string>
    <string name="room_beds_transition">room_beds</string>
    <string name="room_available_beds_transition">room_available_beds_transition</string>
    <string name="room_description_transition">room_description_transition</string>
    <string name="overview">Overview</string>
    <string name="electric_bills">Electric bills</string>
    <string name="room_types">Room types</string>
    <string name="water_bills">Water bills</string>
    <string name="statistics">Statistics</string>
    <string name="terms">Terms</string>
    <string name="features">Features</string>
    <string name="room_contracts">Room contracts</string>
    <string name="login_to_your_admin_account">Login to your admin account</string>
    <string name="delete">Delete</string>
    <string name="write_comment">Write comment...</string>
    <string name="agree">Agree</string>
    <string name="notification">Notification</string>
    <string name="notice">Notice</string>
    <string name="register_room_entry">Register room entry</string>
    <string name="ask_for_register_room">Are you sure to register this room?</string>
    <string name="ask_for_logout">Are you sure to logout?</string>
    <string name="ask_for_quit_app">Are you sure to quit app?</string>
    <string name="quit">Quit</string>

</resources>