<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            style="@style/PrimaryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="40dp"
            android:text="@string/dormitory"
            android:textAlignment="center"
            android:textSize="48sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:contentDescription="@string/login_page_image"
            android:scaleType="centerCrop"
            android:src="@drawable/demo" />

        <TextView
            style="@style/PrimaryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="32dp"
            android:text="@string/login_to_your_account"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            style="@style/PrimaryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/identifier" />

        <EditText
            android:id="@+id/identifier"
            style="@style/PrimaryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:drawableEnd="@drawable/ic_user"
            android:hint="@string/identifier"
            android:inputType="username" />

        <TextView
            style="@style/PrimaryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password"
            style="@style/PrimaryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:drawableEnd="@drawable/ic_key"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_forgot_password"
            style="@style/PrimaryTextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/forgot_password" />

        <Button
            android:id="@+id/button_login"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/desc_sign_up"
                style="@style/PrimaryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account" />

            <Button
                android:id="@+id/button_sign_up"
                style="@style/PrimaryTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register" />
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>